--- a/proper.client/src/assets/scss/_variables.scss
+++ b/proper.client/src/assets/scss/_variables.scss
@@ -2,7 +2,10 @@ $body-bg: #f2f2f2;
 $primary: #3BA5DC;
 $secondary: #FF3697;
 $danger: #EB5757;
-$success: #27AE60;
+$success: #06a548;
 $warning: #FF7F50;
 $info: #00C9BD;
-$dark: #313130;
+$dark: #3300CC;
+$text-light: #B3E5FC ;
+$text-dark: #000066;
+$primary-muted: #117A65;
