--- a/proper.client/src/assets/scss/_variables.scss
+++ b/proper.client/src/assets/scss/_variables.scss
@@ -1,11 +1,11 @@
 $body-bg: #f2f2f2;
-$primary: #3BA5DC;
-$secondary: #FF3697;
-$danger: #EB5757;
-$success: #06a548;
-$warning: #FF7F50;
+$primary: #C2EABA;
+$secondary: #A7C4A0;
+$danger: #AC8887;
+$success: #09814A;
+$warning: #FC7753;
 $info: #00C9BD;
-$dark: #3300CC;
-$text-light: #B3E5FC ;
-$text-dark: #000066;
+$dark: #2E3532;
+$text-light: #E6EFE9 ;
+$text-dark: #8F8389;
 $primary-muted: #117A65;
