sass nightmare rabbit hole

--- a/proper.client/src/assets/scss/_variables.scss
+++ b/proper.client/src/assets/scss/_variables.scss
@@ -1,8 +1,8 @@
 $body-bg: #f2f2f2;
 $primary: #C2EABA;
-$secondary: #A7C4A0;
-$danger: #AC8887;
+$secondary: #E6EFE9;
+$danger: #A7C4A0;
 $success: #09814A;
 $warning: #FC7753;
-$info: #00C9BD;
-$dark: #2E3532;
+$info: #8F8389;
+$dark: #4B3B47;
